2007-11-20  Stefan Jahn  <stefan@lkcc.org>

	* diagrams/diagram.cpp (getAxisLimits): Fixed a segfault bug when
	recomputing invalid graph data is requested.

2007-10-27  Stefan Jahn  <stefan@lkcc.org>

	* bitmaps/Makefile.am (XPMS): Added ifile icon.  Thanks to
	Gunther.

	* qucs_fr.ts: Fixed translations for CCVS and VCCS.  Also updated
	the translations.  Thanks to Vincent.

2007-09-28  Stefan Jahn  <stefan@lkcc.org>

	* qucs.cpp (slotCMenuRename): Fixed behaviour of rename context
	menu callback.

2007-08-20  Stefan Jahn  <stefan@lkcc.org>

	* diagrams/diagram.cpp (getAxisLimits): Fixed segfault bug in
	3D-cartesian diagram.

	* dialogs/savedialog.cpp (saveSelectedClicked): Fixed a bug
	causing the GUI to crash on Win32 when saving selected unsaved
	schematics at end dialog.

2007-08-16  Stefan Jahn  <stefan@lkcc.org>

	* schematic.cpp (print): Fixed a compile issue which strangely
	occurred with some gcc versions (3.3.3 and 3.3.1).

	* dialogs/importdialog.cpp (slotBrowse): Added CSV file type to
	the list of possible data import file formats.

2007-06-11  Stefan Jahn  <stefan@lkcc.org>

	* qucs.cpp (QucsApp): Allowing URIs (file:/path/file.sch) as
	command line files.

2007-06-03  Stefan Jahn  <stefan@lkcc.org>

	* qucs_pl.ts: Updated Polish translations.  Thanks to Darek.

2007-05-31  Stefan Jahn  <stefan@lkcc.org>

	* qucs_uk.ts: Updated Ukrainian translations.

2007-05-26  Stefan Jahn  <stefan@lkcc.org>

	* qucs_ru.ts: Updated Russian translations.  Thanks to Igor.

2007-05-23  Stefan Jahn  <stefan@lkcc.org>

	* qucsveri.bat: Added wrapper script for digital Verilog-HDL
	simulations for Win32.

2007-05-17  Stefan Jahn  <stefan@lkcc.org>

	* schematic_file.cpp (giveNodeNames): Using QPtrListIterator for
	iterating the DocComps list.  This is because the current item of
	the list itself may be modified during iteration in the
	drawContents() method due to a repaint event.

2007-05-15  Stefan Jahn  <stefan@lkcc.org>
