@@ -1,3 +1,7 @@
+2007-12-10  Stefan Jahn  <stefan@lkcc.org>
+
+	* diagrams/diagram.cpp (regionCode): Fixed small clipping bug.
+
 2007-11-20  Stefan Jahn  <stefan@lkcc.org>
 
 	* diagrams/diagram.cpp (getAxisLimits): Fixed a segfault bug when
